2019-10-08  Martin Sebor  <msebor@redhat.com>

	PR tetsuite/92025
	* gcc.dg/Wstringop-overflow-12.c: Remove xfail.

2019-10-08  Richard Biener  <rguenther@suse.de>

	* gcc.dg/vect/pr65947-1.c: Adjust.
	* gcc.dg/vect/pr65947-13.c: Likewise.
	* gcc.dg/vect/pr65947-14.c: Likewise.
	* gcc.dg/vect/pr65947-4.c: Likewise.
	* gcc.dg/vect/pr80631-1.c: Likewise.
	* gcc.dg/vect/pr80631-2.c: Likewise.

2019-10-08  Tobias Burnus  <tobias@codesourcery.com>

	* gfortran.dg/goacc/continuation-free-form.f95: Update dg-error.

2019-10-08  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.target/aarch64/torture/simd-abi-9.c: Require LP64 for
	the function body test.

2019-10-08  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/torture/builtin-fp-int-inexact-c2x.c: New test.

2019-10-07  Jozef Lawrynowicz  <jozef.l@mittosystems.com>

	* gcc.target/msp430/430x-insns.c: New test.
	* gcc.target/msp430/data-attributes-2.c: Remove dg-warning
	directives for conflicts between the "section" and "lower" attributes.
	* gcc.target/msp430/msp430.exp
	(check_effective_target_msp430_region_not_lower): New.
	(check_effective_target_msp430_region_lower): New.
	* gcc.target/msp430/object-attributes-430.c: New test.
	* gcc.target/msp430/object-attributes-default.c: New test.
	* gcc.target/msp430/object-attributes-mlarge-any-region.c: New test.
	* gcc.target/msp430/object-attributes-mlarge.c: New test.

2019-10-07  Jakub Jelinek  <jakub@redhat.com>

	* gcc.target/i386/pr71801.c (uuidcache_init): Fix up size of d array.

2019-10-07  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/diagnostic/not-a-function-template-1.C: New.
	* g++.dg/template/crash107.C: Adjust expected location.
	* g++.dg/template/dependent-expr1.C: Check locations.
	* g++.dg/template/error17.C: Check location.

2019-10-07  Richard Sandiford  <richard.sandiford@arm.com>

	PR target/91994
	* gcc.target/i386/pr91994.c: New test.

2019-10-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/91975